# beeminder-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
beeconfig/: Cargo.toml
beeconfig/src/: lib.rs
beeline/: Cargo.toml
beeline/completions/: _beeline
beeline/src/: backup.rs  edit.rs  main.rs
beemcp/: Cargo.toml
beemcp/src/: main.rs
beeminder/: Cargo.toml
beeminder/examples/: debug_api.rs  demo.rs
beeminder/src/: lib.rs  types.rs
beeminder/tests/: test_auth_token.rs  test_client_config.rs  test_create_datapoint.rs  test_danger_actions.rs  test_datapoints_batch.rs  test_get_datapoints.rs  test_get_goal.rs  test_get_goals.rs  test_get_user.rs  test_goal_actions.rs  test_recorded_fixtures.rs
beeminder/tests/common/: mock_server.rs
beeminder/tests/fixtures/: README.md
beeminder/tests/fixtures/min/auth/: get_token_valid.json
beeminder/tests/fixtures/min/danger/: cancel_stepdown_valid.json  shortcircuit_valid.json  stepdown_valid.json
beeminder/tests/fixtures/min/datapoints/: create_all_valid.json  create_datapoint_valid.json  get_datapoints_valid.json
beeminder/tests/fixtures/min/goals/: create_goal_missing_required.json  create_goal_valid.json  get_goal_not_found.json  get_goal_valid.json  get_goals_valid.json  refresh_graph_valid.json  update_goal_valid.json
beeminder/tests/fixtures/min/user/: get_user_invalid_auth.json  get_user_valid.json
beeminder/tests/fixtures/recorded/auth/: get_token_no_auth.json
beeminder/tests/fixtures/recorded/danger/: README.md  cancel_stepdown_no_pending.json  cancel_stepdown_valid.json  shortcircuit_valid.json  stepdown_error.json  stepdown_valid.json
beeminder/tests/fixtures/recorded/datapoints/: create_all_valid.json  create_datapoint_duplicate_requestid.json  create_datapoint_minimal.json  create_datapoint_missing_value.json  create_datapoint_with_comment.json  create_datapoint_with_daystamp.json  create_datapoint_with_requestid.json  delete_datapoint_not_found.json  delete_datapoint_valid.json  get_datapoints_count.json  get_datapoints_paginated.json  get_datapoints_sorted.json  get_datapoints_valid.json  update_datapoint_not_found.json  update_datapoint_valid.json
beeminder/tests/fixtures/recorded/goals/: create_goal_missing_required.json  create_goal_valid.json  get_archived_valid.json  get_goal_emaciated.json  get_goal_not_found.json  get_goal_valid.json  get_goal_with_datapoints.json  get_goals_emaciated.json  get_goals_valid.json  refresh_graph_valid.json  update_goal_valid.json
beeminder/tests/fixtures/recorded/user/: get_user_diff_no_changes.json  get_user_diff_valid.json  get_user_emaciated.json  get_user_invalid_auth.json  get_user_valid.json
beeminder/tests/recording/: mitmproxy_script.py  record_session.sh
beetui/: Cargo.toml
beetui/src/: app.rs  handlers.rs  main.rs  state.rs  ui.rs
examples/: demo.rs
src/: lib.rs  types.rs
