[package]
name = "beeminder-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "beeminder"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
tokio = { version = "^1.42", features = ["full"] }
time = { version = "^0.3", features = ["serde", "parsing", "formatting"]}
