[package]
name = "beeconfig"
version = "0.1.0"
edition = "2021"
description = "Shared config loader for Beeminder tools"
license = "MIT"
repository = "https://github.com/felixmde/beeminder-rs"
readme = "../README.md"
keywords = ["beeminder", "config"]
categories = ["development-tools"]

[lib]
name = "beeconfig"
path = "src/lib.rs"

[dependencies]
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "local-offset"] }
