[package]
name = "beeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beeline"
path = "src/main.rs"

[dependencies]
beeminder = { path = "../beeminder" }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
time = { version = "0.3", features = ["serde", "macros", "local-offset"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
