[package]
name = "beemcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Beeminder"
license = "MIT"
repository = "https://github.com/felixmde/beeminder-rs"
readme = "../README.md"
keywords = ["beeminder", "mcp"]
categories = ["development-tools"]

[[bin]]
name = "beemcp"
path = "src/main.rs"

[dependencies]
beeminder = { path = "../beeminder" }
beeconfig = { path = "../beeconfig" }
rmcp = { version = "0.14.0", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
time = { version = "0.3", features = ["serde"] }
anyhow = "1.0"
