[package]
name = "beeminder"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for the Beeminder API"
license = "MIT"
repository = "https://github.com/felixmde/beeminder-rs"
readme = "../README.md"
keywords = ["beeminder", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[lib]
name = "beeminder"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
