[package]
name = "beetui"
version = "0.1.0"
edition = "2021"
description = "TUI dashboard for Beeminder"
license = "MIT"
repository = "https://github.com/felixmde/beeminder-rs"
readme = "../README.md"
keywords = ["beeminder", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "beetui"
path = "src/main.rs"

[dependencies]
beeminder = { path = "../beeminder" }
beeconfig = { path = "../beeconfig" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
time = { version = "0.3", features = ["local-offset"] }
serde_json = "1.0"
